--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
+    "recharts": "^2.7.2",
     "sass": "^1.63.3",
     "tailwindcss": "3.3.2"
   }
