--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.0",
-    "react-icons": "^4.9.0",
-    "recharts": "^2.7.2",
-    "sass": "^1.63.3",
-    "tailwindcss": "3.3.2",
-    "zustand": "^4.4.7"
+    "react-hook-form": "^7.51.1",
+    "react-icons": "^4.12.0",
+    "sass": "^1.72.0",
+    "tailwindcss": "3.3.2"
   }
 }
