--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "date-fns": "^2.30.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
-    "next-pwa": "^5.6.0",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.1",
-    "react-icons": "^4.12.0",
-    "sass": "^1.72.0",
-    "tailwindcss": "3.3.2"
+    "autoprefixer": "10.4.19",
+    "date-fns": "^3.6.0",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.0",
+    "sass": "^1.76.0",
+    "tailwindcss": "3.4.3"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
