--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.7",
+    "@types/mdx": "^2.0.13",
     "autoprefixer": "10.4.19",
     "date-fns": "^3.6.0",
     "next": "14.2.3",
@@ -22,6 +26,7 @@
     "tailwindcss": "3.4.3"
   },
   "devDependencies": {
+    "@types/node": "22.13.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
   }
